[gd_scene load_steps=14 format=3 uid="uid://cdjplu56l2jqh"]

[ext_resource type="Texture2D" uid="uid://b2ftwa60xj37" path="res://mainMenu/Assets/Images/fondo.png" id="1_tv7ec"]
[ext_resource type="Script" uid="uid://b13tdlov7o1u" path="res://mainMenu/Scenes/lore_book.gd" id="1_wv48v"]
[ext_resource type="Texture2D" uid="uid://5rs8jmdnumd7" path="res://mainMenu/Assets/Buttoms/Mute.tres" id="2_wv48v"]
[ext_resource type="Texture2D" uid="uid://fcbom5dwpmgc" path="res://mainMenu/Assets/Buttoms/unMute.tres" id="3_b8qrb"]
[ext_resource type="Script" uid="uid://ditfvc7qwilfq" path="res://mainMenu/Scripts/MuteButton.gd" id="4_dnews"]
[ext_resource type="Texture2D" uid="uid://byim6hlifbw6m" path="res://mainMenu/Assets/Buttoms/regresar_normal.tres" id="5_i2si5"]
[ext_resource type="Texture2D" uid="uid://cbuqbkoc7cmgy" path="res://mainMenu/Assets/Buttoms/regresar_press.tres" id="6_syylf"]
[ext_resource type="Texture2D" uid="uid://sg0dgivivfml" path="res://mainMenu/Assets/Buttoms/siguiente_normal.tres" id="7_i1bg0"]
[ext_resource type="Texture2D" uid="uid://c0t2h4efkhys" path="res://mainMenu/Assets/Buttoms/siguiente_press.tres" id="8_2r77l"]
[ext_resource type="Texture2D" uid="uid://dphppnhi3rvd5" path="res://mainMenu/Assets/Buttoms/atras_normal.tres" id="9_bhhnu"]
[ext_resource type="Texture2D" uid="uid://mbnx3brlqiva" path="res://mainMenu/Assets/Buttoms/atras_pressl.tres" id="10_seg0w"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kmmth"]
texture = ExtResource("1_tv7ec")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j47ew"]
bg_color = Color(0.0705882, 0.109804, 0.12549, 1)

[node name="LoreBook" type="Node2D"]
script = ExtResource("1_wv48v")

[node name="Panel" type="Panel" parent="."]
offset_right = 640.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("StyleBoxTexture_kmmth")

[node name="Panel2" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 32.0
offset_right = 576.0
offset_bottom = 320.0
theme_override_styles/panel = SubResource("StyleBoxFlat_j47ew")

[node name="MuteButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 590.0
offset_top = 5.0
offset_right = 603.0
offset_bottom = 14.0
scale = Vector2(3, 3)
texture_normal = ExtResource("2_wv48v")
texture_pressed = ExtResource("3_b8qrb")
script = ExtResource("4_dnews")

[node name="buttom_back" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 602.0
offset_top = 324.0
offset_right = 623.0
offset_bottom = 342.0
scale = Vector2(2, 2)
texture_normal = ExtResource("5_i2si5")
texture_pressed = ExtResource("6_syylf")
texture_hover = ExtResource("6_syylf")

[node name="siguienteButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 536.0
offset_top = 320.0
offset_right = 555.0
offset_bottom = 340.0
scale = Vector2(2, 2)
texture_normal = ExtResource("7_i1bg0")
texture_pressed = ExtResource("8_2r77l")
texture_hover = ExtResource("8_2r77l")

[node name="atrasButton" type="TextureButton" parent="."]
offset_left = 72.0
offset_top = 320.0
offset_right = 90.0
offset_bottom = 339.0
scale = Vector2(2, 2)
texture_normal = ExtResource("9_bhhnu")
texture_pressed = ExtResource("10_seg0w")
texture_hover = ExtResource("10_seg0w")

[connection signal="pressed" from="Panel/buttom_back" to="." method="_on_buttom_back_pressed"]
